# Vyakrti

./: .gitignore  ANALYSIS.md  BRANDING.md  Cargo.toml  LICENSE  README.md
screenshots/: README.md
vyakrti-ide/: .gitignore  start-ide.bat  start-ide.ps1
vyakrti-ide/backend/: Cargo.toml
vyakrti-ide/backend/src/: compiler.rs  lsp.rs  main.rs  payload.rs  workspace.rs  ws.rs
vyakrti-language/: .gitignore  Cargo.toml
vyakrti-language/selfhost/: diagnostics.vya  golden_smoke.vya  lexer.vya  parser.vya  tokens.vya
vyakrti-language/src/: ast.rs  borrow_checker.rs  compiler.rs  derive_processor.rs  disassembler.rs  exhaustiveness.rs  import_resolver.rs  jit_compiler.rs  jit_memory.rs  lexer.rs  lib.rs  macro_expander.rs  main.rs  monomorphizer.rs  optimizer.rs  parser.rs  semantic.rs  vm.rs
vyakrti-language/std/: math_utils.vya  तन्त्रम्.vya
vyakrti-language/tests/: ai_harness.rs  tantram.vya
