[package]
name = "vyakriti"
version = "2026.1.0"
edition = "2021"
authors = ["Principal Compiler Architect"]

[[bin]]
name = "vy"
path = "src/bin/vy.rs"

[dependencies]
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "winnt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
