[package]
name = "vyakrti-ide-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
vyakriti = { path = "../../vyakrti-language" }
